WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240800
Regression(
r294611
): ASSERTION FAILED: m_isConstructed under WebCore::fullyQualifiedInfoTableName()
https://bugs.webkit.org/show_bug.cgi?id=240800
Summary
Regression(r294611): ASSERTION FAILED: m_isConstructed under WebCore::fullyQu...
Chris Dumez
Reported
2022-05-23 08:20:39 PDT
ERROR: Unable to turn on incremental auto-vacuum (0 not an error) ./Modules/webdatabase/Database.cpp(343) : ExceptionOr<void> WebCore::Database::performOpenAndVerify(bool) ASSERTION FAILED: m_isConstructed /Volumes/Data/worker/Apple-Monterey-Debug-Build/build/WebKitBuild/Debug/usr/local/include/wtf/NeverDestroyed.h(152) : WTF::LazyNeverDestroyed::PointerType WTF::LazyNeverDestroyed<WTF::String>::storagePointerWithoutAccessCheck() const [T = WTF::String, AccessTraits = WTF::AnyThreadsAccessTraits] 1 0x120d6c249 WTFCrash 2 0x1305ce39b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1331def27 WTF::LazyNeverDestroyed<WTF::String, WTF::AnyThreadsAccessTraits>::storagePointerWithoutAccessCheck() const 4 0x1331deeb2 WTF::LazyNeverDestroyed<WTF::String, WTF::AnyThreadsAccessTraits>::storagePointer() const 5 0x1331dee85 WTF::LazyNeverDestroyed<WTF::String, WTF::AnyThreadsAccessTraits>::get() 6 0x1331dee2d WebCore::fullyQualifiedInfoTableName()::$_6::operator()() const 7 0x1331dedc5 decltype(static_cast<WebCore::fullyQualifiedInfoTableName()::$_6>(fp)()) std::__1::__invoke<WebCore::fullyQualifiedInfoTableName()::$_6>(WebCore::fullyQualifiedInfoTableName()::$_6&&) 8 0x1331deda8 void std::__1::__call_once_param<std::__1::tuple<WebCore::fullyQualifiedInfoTableName()::$_6&&> >::__execute<>(std::__1::__tuple_indices<>) 9 0x1331ded75 std::__1::__call_once_param<std::__1::tuple<WebCore::fullyQualifiedInfoTableName()::$_6&&> >::operator()() 10 0x1331dec3d void std::__1::__call_once_proxy<std::__1::tuple<WebCore::fullyQualifiedInfoTableName()::$_6&&> >(void*) 11 0x7ff81019fd10 std::__1::__call_once(unsigned long volatile&, void*, void (*)(void*)) 12 0x1331deb69 void std::__1::call_once<WebCore::fullyQualifiedInfoTableName()::$_6>(std::__1::once_flag&, WebCore::fullyQualifiedInfoTableName()::$_6&&) 13 0x1331ce878 WebCore::fullyQualifiedInfoTableName() 14 0x1331cad77 WebCore::Database::setVersionInDatabase(WTF::String const&, bool) 15 0x1331cdae4 WebCore::Database::performOpenAndVerify(bool) 16 0x1331f1101 WebCore::DatabaseOpenTask::doPerformTask() 17 0x1331f0ff4 WebCore::DatabaseTask::performTask() 18 0x1331f1b91 WebCore::DatabaseThread::databaseThread() 19 0x13320d048 WebCore::DatabaseThread::start()::$_0::operator()() const 20 0x13320cfe9 WTF::Detail::CallableWrapper<WebCore::DatabaseThread::start()::$_0, void>::call() 21 0x120d9bb82 WTF::Function<void ()>::operator()() const
Attachments
Patch
(1.33 KB, patch)
2022-05-23 08:40 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-05-23 08:40:50 PDT
Created
attachment 459679
[details]
Patch
Chris Dumez
Comment 2
2022-05-23 08:46:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/919
EWS
Comment 3
2022-05-23 09:04:59 PDT
Committed
r294645
(
250869@main
): <
https://commits.webkit.org/250869@main
> Reviewed commits have been landed. Closing PR #919 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2022-05-23 09:05:30 PDT
<
rdar://problem/93762659
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug