Regression(r294611): ASSERTION FAILED: m_isConstructed under WebCore::fullyQualifiedInfoTableName() https://bugs.webkit.org/show_bug.cgi?id=240800

Unreviewed, use LazyNeverDestroyed::construct() instead of assignment to LazyNeverDestroyed::get()
to address the debug assertion on the bots.

* Source/WebCore/Modules/webdatabase/Database.cpp:
(WebCore::fullyQualifiedInfoTableName):

Canonical link: https://commits.webkit.org/250869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294645 268f45cc-cd09-0410-ab3c-d52691b4dbfc